--- a/src/features/hero-section/hero-article/hero-article.scss
+++ b/src/features/hero-section/hero-article/hero-article.scss
@@ -1,12 +1,15 @@
 @use "@/styles/responsive-mixins";
 @use "@/styles/mixins";
+@use "@/styles/constants";
 
 .hero-article {
-  --article-color: var(--primary);
+  --_article-color: var(--article-color, var(--primary));
+  --_text-color: var(--text-color, var(--white));
   position: relative;
-  padding: 24px 16px 12px;
-  background-color: var(--article-color);
-  color: var(--white);
+  padding: 24px 16px calc(12px + map-get(constants.$wave-polygon-inverted-md, "height"));
+  background-color: var(--_article-color);
+  color: var(--_text-color);
+  clip-path: map-get(constants.$wave-polygon-inverted-md, "value");
 
   &-title {
     @include mixins.h4;
@@ -16,24 +19,10 @@
     margin: 12px 0 24px;
   }
 
-  &-wave {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    transform: translateY(99%);
-    width: 100%;
-    height: auto;
-    color: var(--article-color);
-  }
-
-  &[data-variant="secondary"] {
-    --article-color: var(--secondary);
-    color: var(--black);
-  }
-
   @include responsive-mixins.md {
     padding: 48px 48px 24px;
     border-radius: 0 0 20px 0;
+    clip-path: none;
 
     &-title {
       @include mixins.h3;
@@ -41,10 +30,6 @@
 
     &-body {
       margin: 24px 0;
-    }
-
-    &-wave {
-      display: none;
     }
   }
 
@@ -57,7 +42,6 @@
 
     &-body {
       margin: 24px 0 48px;
-      font-size: 1.25rem;
     }
   }
 }
