--- a/src/components/image-banner/image-banner.scss
+++ b/src/components/image-banner/image-banner.scss
@@ -1,12 +1,16 @@
 @use "@/styles/responsive-mixins";
 @use "@/styles/mixins";
+@use "@/styles/layout";
 
 .image-banner {
+  --_background-color: var(--background-color, var(--background));
+  --_text-color: var(--text-color, var(--black));
+  --_action-color: var(--action-color, var(--primary));
   position: relative;
   display: flex;
   justify-content: center;
   isolation: isolate;
-  color: var(--black);
+  color: var(--_text-color);
 
   &-background {
     position: absolute;
@@ -30,7 +34,7 @@
   &-card {
     border-radius: 8px;
     padding: 32px 16px;
-    background-color: var(--background);
+    background-color: var(--_background-color);
   }
 
   &-title {
@@ -43,6 +47,7 @@
 
   &-action {
     margin-top: 24px;
+    color: var(--_action-color);
   }
 
   @include responsive-mixins.md {
@@ -58,7 +63,7 @@
   @include responsive-mixins.lg {
     &-content {
       padding: 166px 0;
-      width: 83.33333334%;
+      width: map-get(layout.$columns, "col-10");
       margin: auto;
     }
 
