--- a/src/components/information-card/information-card.scss
+++ b/src/components/information-card/information-card.scss
@@ -2,14 +2,16 @@
 @use "@/styles/mixins";
 
 .information-card {
+  --_text-color: var(--text-color, var(--black));
+  --_background-color: var(--background-color, var(--white));
   padding: 24px;
   display: flex;
   height: 100%;
   gap: 24px;
   justify-content: center;
   flex-direction: column;
-  color: var(--black);
-  background-color: var(--white);
+  color: var(--_text-color);
+  background-color: var(--_background-color);
 
   &-info {
     display: flex;
