- Updated form according to design

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -16,8 +16,8 @@
     left: 0;
     width: 100%;
     height: 1px;
-    background-color: var(--night-transparent-10);
-    box-shadow: 0 1px 4px 0 var(--night-transparent-10);
+    background-color: var(--black-transparent-10);
+    box-shadow: 0 1px 4px 0 var(--black-transparent-10);
   }
 
   .logo {
