--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -1,10 +1,9 @@
+@use "@/styles/mixins";
+
 .input {
-  padding: 16px 24px;
-  border: none;
-  border-radius: 40px;
-  font-family: "Open Sans", sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: var(--night);
+  @include mixins.paragraph;
+  padding: 12px 16px;
+  border-radius: 8px;
+  border: 2px solid var(--black);
+  color: var(--black);
 }
