--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -86,6 +86,7 @@
 #root {
   --supernova: #000;
   --light: #fff;
+  --fire: #CD2026;
   --white: #fff;
   --black: #002F3F;
   --background: #F8F5F1;
@@ -100,6 +101,6 @@
   --primary-light-80: color-mix(in srgb, var(--light) 100%, var(--primary) 80%);
   --primary-dark-25: color-mix(in srgb, var(--primary) 100%, var(--supernova) 25%);
   --primary-dark-33: color-mix(in srgb, var(--primary) 100%, var(--supernova) 33%);
-  --night-transparent-10: color-mix(in srgb, var(--black) 10%, transparent 100%);
+  --black-transparent-10: color-mix(in srgb, var(--black) 10%, transparent 100%);
   --backdrop: color-mix(in srgb, var(--supernova) 33%, transparent 100%);
 }
