- updated form according to the new design - added integration with send pulse

--- a/src/components/sign-up/sign-up.scss
+++ b/src/components/sign-up/sign-up.scss
@@ -46,6 +46,10 @@
     margin-top: 12px;
   }
 
+  &-error {
+    color: var(--fire);
+  }
+
   @include responsive-mixins.lg {
     padding: 64px 0;
 
